third_party/rust/chromium_crates_io/vendor/thiserror-v2/tests/ui/expression-fallback.stderr
error: expected `,`, found `.`
 --> tests/ui/expression-fallback.rs:4:11
  |
4 | #[error("".yellow)]
  |           ^ expected `,`

error: argument never used
 --> tests/ui/expression-fallback.rs:4:12
  |
4 | #[error("".yellow)]
  |         -- ^^^^^^ argument never used
  |         |
  |         formatting specifier missing
  |
help: format specifiers use curly braces, consider adding a format specifier
  |
4 | #[error("{}".yellow)]
  |          ++

error[E0425]: cannot find value `yellow` in this scope
 --> tests/ui/expression-fallback.rs:4:12
  |
4 | #[error("".yellow)]
  |            ^^^^^^ not found in this scope
